Incorporated some parameter and publishing changes

--- a/nextflow.config
+++ b/nextflow.config
@@ -13,11 +13,18 @@ process {
 
 
     withLabel: bigMem {
-        memory = 20.GB
+        memory = 30.GB
+    }
+
+    withLabel: hugeMem{
+    	memory = 30.GB
     }
 
     withLabel: multiCore {
         cpus = 8
     }
 
+    withLabel: quadCore{
+    	cpus = 4
+   }
 }
