Added MultiQC and Bismark Reports to most workflows

--- a/nextflow.config
+++ b/nextflow.config
@@ -25,6 +25,17 @@ process {
     }
 
     withLabel: quadCore{
-    	cpus = 4
-   }
+     	cpus = 4
+    }
+   
+    withName: MULTIQC{
+        cpus = 2
+        // module  multiqc TODO: Not working at present
+    }
+
+    withName: TRIM_GALORE{
+        cpus = 4
+        memory = 4.GB
+        // module 
+    }
 }
