Starting to add scNMT-seq pipeline

--- a/nextflow.config
+++ b/nextflow.config
@@ -13,11 +13,11 @@ process {
 
 
     withLabel: bigMem {
-        memory = 30.GB
+        memory = 20.GB
     }
 
     withLabel: hugeMem{
-    	memory = 30.GB
+    	memory = 40.GB
     }
 
     withLabel: multiCore {
@@ -28,14 +28,14 @@ process {
      	cpus = 4
     }
    
-    withName: MULTIQC{
-        cpus = 2
+   // withName: MULTIQC{
+    //    cpus = 2
         // module  multiqc TODO: Not working at present
-    }
+   // }
 
     withName: TRIM_GALORE{
-        cpus = 4
-        memory = 4.GB
+       cpus = 4
+       memory = 10.GB
         // module 
     }
 }
