--- a/nextflow.config
+++ b/nextflow.config
@@ -28,14 +28,40 @@ process {
      	cpus = 4
     }
    
-   // withName: MULTIQC{
-    //    cpus = 2
+   
+ 
+    //withName: MULTIQC{
+     //   cpus = 2
         // module  multiqc TODO: Not working at present
-   // }
-
+    //}
+    withName: FASTQ_SCREEN{
+        cpus = 4
+        memory = 50.GB
+    }
     withName: TRIM_GALORE{
        cpus = 4
        memory = 10.GB
         // module 
     }
 }
+notification {
+    enabled = true
+    to = "felix.krueger@babraham.ac.uk"
+}
+
+timeline {
+    enabled = true
+    file = "execution_timeline.html"
+}
+report {
+    enabled = true
+    file = "execution_report.html"
+}
+trace {
+    enabled = true
+    file = "execution_trace.txt"
+}
+// dag {
+//   enabled = true
+//   file = "pipeline_dag.svg"
+// }
