Changed email settings and added MultiQC to QC pipeline

--- a/nextflow.config
+++ b/nextflow.config
@@ -46,7 +46,7 @@ process {
 }
 notification {
     enabled = true
-    to = "felix.krueger@babraham.ac.uk"
+    to = "${USER}@babraham.ac.uk"
 }
 
 timeline {
