Removed deprecation warnings, and added single-end mode to files.mod.nf

--- a/nextflow.config
+++ b/nextflow.config
@@ -65,3 +65,8 @@ trace {
 //   enabled = true
 //   file = "pipeline_dag.svg"
 // }
+
+tower {
+  accessToken = 'c618fd637bd6f302b27117c547c4cdbd52c5c26a'
+  enabled = true
+}
