Some changes for demo

--- a/nextflow.config
+++ b/nextflow.config
@@ -57,10 +57,10 @@ report {
     enabled = true
     file = "execution_report.html"
 }
-trace {
-    enabled = true
-    file = "execution_trace.txt"
-}
+//trace {
+ //   enabled = true
+//    file = "execution_trace.txt"
+//}
 // dag {
 //   enabled = true
 //   file = "pipeline_dag.svg"
