Adapting to DSL2 changes

--- a/nextflow.config
+++ b/nextflow.config
@@ -15,9 +15,13 @@ process {
     withLabel: bigMem {
         memory = 20.GB
     }
+    
+    withLabel: mem40G {
+        memory = 40.GB
+    }
 
     withLabel: hugeMem{
-    	memory = 40.GB
+    	memory = 80.GB
     }
 
     withLabel: multiCore {
@@ -36,7 +40,7 @@ process {
     //}
     withName: FASTQ_SCREEN{
         cpus = 4
-        memory = 50.GB
+        memory = 40.GB
     }
     withName: TRIM_GALORE{
        cpus = 4
