Added timeline.overwrite to the config so jobs aren't blocked

--- a/nextflow.config
+++ b/nextflow.config
@@ -20,15 +20,20 @@ process {
     }
 
     withLabel: hugeMem{
-    	memory = 80.GB
+	memory = 80.GB
     }
 
+    // We've halved our cpu allocations as slurm
+    // assigns tasks (threads) not physical cpus
+    // so we over-commit if we use the full number
+    // of cpus
+
     withLabel: multiCore {
-        cpus = 8
+        cpus = 4
     }
 
     withLabel: quadCore{
-     	cpus = 4
+	cpus = 2
     }
    
 }
@@ -40,6 +45,7 @@ notification {
 
 timeline {
     enabled = true
+    timeline.overwrite = true
     file = "execution_timeline.html"
 }
 report {
