Revert config changes

--- a/nextflow.config
+++ b/nextflow.config
@@ -29,14 +29,15 @@ process {
     // of cpus
 
     withLabel: multiCore {
-        cpus = 4
+        cpus = 8
     }
 
     withLabel: quadCore{
-	cpus = 2
+	cpus = 4
     }
    
 }
+
 
 notification {
     enabled = true
@@ -50,6 +51,7 @@ timeline {
 }
 report {
     enabled = true
+    report.overwrite = true
     file = "execution_report.html"
 }
 //trace {
